--- a/java-appl/build.gradle
+++ b/java-appl/build.gradle
@@ -15,7 +15,11 @@ repositories {
 }
 
 dependencies {
-    compile 'commons-collections:commons-collections:3.2.1'
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+	
+	// https://mvnrepository.com/artifact/log4j/log4j
+	compile group: 'log4j', name: 'log4j', version: '1.2.17'
 }
 
 archivesBaseName = "bizobj-tools-images-planner"
