--- a/java-appl/build.gradle
+++ b/java-appl/build.gradle
@@ -17,6 +17,8 @@ repositories {
 dependencies {
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+	// https://mvnrepository.com/artifact/commons-io/commons-io
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 	
 	// https://mvnrepository.com/artifact/log4j/log4j
 	compile group: 'log4j', name: 'log4j', version: '1.2.17'
@@ -29,6 +31,9 @@ dependencies {
 	compile group: 'org.jxls', name: 'jxls-poi', version: '1.0.11'
 	// https://mvnrepository.com/artifact/org.jxls/jxls-reader
 	compile group: 'org.jxls', name: 'jxls-reader', version: '2.0.2'
+
+	// https://mvnrepository.com/artifact/org.apache.velocity/velocity
+	compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
 }
 
 archivesBaseName = "bizobj-tools-images-planner"
